--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,11 @@
 			<version>2.9.6</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
 
 	</dependencies>
 </project>
